minor size fix to remove horizontal scrollbar on firefox

--- a/css/general.css
+++ b/css/general.css
@@ -42,7 +42,7 @@ header {
   height: 64px;
   width: 100%;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   header {
     display: none;
   }
