--- a/css/styl/explanations.styl
+++ b/css/styl/explanations.styl
@@ -68,6 +68,9 @@
 		width: 1024px;
 		align-items: center;
 
+		@media screen and (max-width: 1200px)
+			width: 840px
+
 		@media screen and (max-width: 880px)
 			flex-direction: column-reverse
 			align-items: center
