--- a/css/styl/presentation.styl
+++ b/css/styl/presentation.styl
@@ -18,7 +18,7 @@
                 width: 100%;
                 height: 100%;
 
-            @media screen and (max-width: 1200px)
+            @media screen and (max-width: 1280px)
                 display: none;
 
         .right_sheet
@@ -32,7 +32,7 @@
             height: 480px;
             padding-top: 128px;
 
-            @media screen and (max-width: 1200px)
+            @media screen and (max-width: 1280px)
                 padding-top: 64px;
                 width: 100%;
                 padding-bottom: 64px
