--- a/css/styl/team.styl
+++ b/css/styl/team.styl
@@ -45,7 +45,7 @@
                 padding-bottom: 64px;
                 flex-direction: row;
                 justify-content: center
-                padding: 0px;
+                padding:
 
                 margin: auto;
                 border-radius: 0px
